# ego-prompt-library

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  AUDIT_REPORT_Cursor_20260620.md  AUDIT_REPORT_RU.md  Brake.txt  LICENSE  README.md  TEMPLATE_NEW_ROLE.md  pyproject.toml  role.md
.github/workflows/: dashboard-update.yml  prompt-ci.yml
docs/: INDEX.md  conventions.md  governance.md  metrics-l4.md  metrics.md  playbook.md
docs/quarterly-reviews/: 2026-Q2.md
prompts/python-architect/: card.md  changelog.md  prompt.md  test-cases.md
prompts/python-architect/metrics/: dashboard.md  latency.md  quality.md  usage.md
prompts/python-dev/: card.md  changelog.md  prompt.md  test-cases.md
prompts/python-dev/metrics/: dashboard.md  latency.md  quality.md  usage.md
scripts/: README.md  __init__.py  _imports.py  ci-check.py  config.py  fix_metrics_l4.py  logger.py  metrics-collector.py  report.py  report_cli.py  report_wrapper.py  shared.py  sync_quality_templates.py  validate.py
scripts/metrics/: __init__.py  __main__.py  _imports.py  collector.py  dashboard.py  gate_checks.py  models.py  parsers.py  quality_gate.py  thresholds.py
scripts/report/: __init__.py  html_report.py  json_report.py  md_report.py  sanitize.py  utils.py
templates/: card-template.md  changelog-template.md  prompt-template.md  test-template.md
tests/: conftest.py  test_ci_check.py  test_cli_subprocess.py  test_collector.py  test_config.py  test_dashboard.py  test_imports.py  test_integration.py  test_metrics_imports.py  test_parsers.py  test_quality_gate.py  test_reports.py  test_sanitize.py  test_thresholds.py  test_validate.py
