[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-prompt-library"
version = "1.0.0"
description = "Production-ready фреймворк для разработки, тестирования и управления AI prompt-ролями"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Internal"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.8", "ruff>=0.2"]

[project.scripts]
prompt-validate = "scripts.validate_cli:main"
prompt-metrics = "scripts.metrics_collector_cli:main"
prompt-report = "scripts.report_cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
namespaces = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py310"
