[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-prompt-library"
version = "1.0.0"
description = "Production-ready фреймворк для разработки, тестирования и управления AI prompt-ролями"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Internal"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.8", "ruff>=0.2", "pytest>=8.0"]

[project.scripts]
prompt-validate = "scripts.validate:main"
prompt-metrics = "scripts.metrics.__main__:main"
prompt-report = "scripts.report_cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
