[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-prompt-library"
version = "1.1.0"
description = "Production-ready framework for AI prompt roles management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Internal"}
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.8", "ruff>=0.2", "pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
prompt-validate = "scripts.validate:main"
prompt-metrics = "scripts.metrics.__main__:main"
prompt-report = "scripts.report_cli:main"
metrics-collector = "scripts.metrics.__main__:main"

[tool.setuptools]
packages = ["scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=65"